# RobotFramework

./: .gitignore
api/: pyproject.toml  readme.md
api/tests/: user.robot
mobile/: .gitignore  observacoes.txt  readme.md  requirements.txt
mobile/app/: warning.txt
mobile/resources/: base.resource  baseMark.resource
mobile/tests/: click.robot  home.depreceated.robot  home.robot  mark.robot
selenium/: .gitignore  README.MD
selenium/Basic/API_Automation/resources/: api_testing_user.resource
selenium/Basic/API_Automation/tests/: api_testing_user.robot
selenium/Basic/Condition/: UsandoLoops.robot  exercise_loop.robot
selenium/Basic/Variables/: README.MD  exercise.arguments.robot  exercise.dictionary.robot  exercise.list.robot
selenium/Basic/Web_Automation/: README.MD
selenium/Basic/Web_Automation/resources/: amazon_resource.robot
selenium/Basic/Web_Automation/tests/: amazon_test.robot
