[project]
name = "robotcourses-api"
version = "0.1.0"
description = "Estudo de testes de API com Robot Framework"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "robotframework (>=7.3.2,<8.0.0)",
    "robotframework-requests (>=0.9.7,<0.10.0)",
    "robotframework-faker (>=6.0.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
